--- a/style.css
+++ b/style.css
@@ -4,11 +4,16 @@
 	box-sizing: 0;
 }
 body{
-	background-color: #42456E;
+	background: rgb(63,94,251);
+background: -moz-radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+background: -webkit-radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f5efb",endColorstr="#fc466b",GradientType=1);
 }
 header{
-	background:rgb(99, 8, 218);
+	
 	padding: 20px;
+	font-size: 2em;
 }
 .green-glow{
 	border:4px solid green;
@@ -23,6 +28,7 @@ header{
 	box-shadow:0 0 10px grey; 
 }
 header> h1{
+	margin-top: 2em;
 	color:white;
 	text-align:center;
 	font-family:Arial; 
@@ -56,7 +62,7 @@ header> h1{
 }
 #computer-lable{
 	position: absolute;
-	top:30px;
+	top:35px;
 	right:-30px;
 
 }
@@ -79,12 +85,12 @@ header> h1{
 	border: 4px solid white;
 	border-radius: 40%;
 	margin: 0 0px;
-	padding: 20px;
+	padding: 5px;
 	transition: all 0.3s ease;
 }
-.choice:hover{
+.choice:hover {
 	cursor: pointer;
-	background:#24272E;
+	background:greenyellow
 }
 #action-message{
 	text-align: center;
@@ -93,4 +99,23 @@ header> h1{
 	font-weight: bold;
 	font-size:20px;
 	margin-top:20px;
+}
+
+img{
+	height: 10vh;
+	width: 6vw
+}
+
+
+img:hover{
+	color:skyblue;
+}
+#r:hover{
+background: rgb(134, 80, 80);
+}
+#p:hover{
+	background:rgb(16, 167, 187);
+}
+#s:hover{
+	background:rgb(97, 150, 168)127, 129);
 }
